# haxl-amazonka

./: LICENCE  haxl-amazonka.cabal  stack.yaml
examples/: s3.hs
lib/Network/AWS/: DataSource.hs
