name:                haxl-amazonka
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/tvh/haxl-amazonka#readme
license:             BSD3
license-file:        LICENSE
author:              Timo von Holtz
maintainer:          tvh@tvholtz.de
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haxl >= 0.3
                     , amazonka >= 1.3
                     , amazonka-core >= 1.3
                     , async
                     , transformers
                     , hashable
  exposed-modules:     Network.AWS.DataSource
